// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registry registering an existing key does not update the style 1`] = `
<style data-testing-trousers="1" type="text/css">
  1{background-color:red;}
</style>
`;

exports[`Registry registers a global style 1`] = `
<style data-testing-trousers="1" type="text/css">
  {background-color:red;}
</style>
`;

exports[`Registry registers a global, with preexisting style tag 1`] = `
<style data-testing-trousers="1 2" type="text/css">
  1{background-color:red;}
  {background-color:blue;}
</style>
`;

exports[`Registry registers a new style 1`] = `
<style data-testing-trousers="1" type="text/css">
  1{background-color:red;}
</style>
`;

exports[`Registry registers multiple styles 1`] = `
<style data-testing-trousers="1 2" type="text/css">
  1{background-color:red;}
  2{background-color:blue;}
</style>
`;

exports[`Registry registries can hoist style tags to the top 1`] = `
<style data-testing-secondary="2" type="text/css">
  {background-color:blue;}
</style>
<style data-testing-trousers="1" type="text/css">
  1{background-color:red;}
</style>
`;

exports[`Registry registries can mount their own style tags 1`] = `
<style data-testing-trousers="1" type="text/css">
  1{background-color:red;}
</style>
<style data-testing-secondary="2" type="text/css">
  2{background-color:blue;}
</style>
`;

exports[`Registry registries will append style node if append before selector returns null 1`] = `
<style data-testing-trousers="" type="text/css"></style>
<style data-testing-secondary="1" type="text/css">
  1{background-color:blue;}
</style>
`;
